# KiDS

./: .gitignore  CMakeLists.txt  arm9.cpp  arm9.hpp  arm9_instructions.cpp  arm9_instructions.hpp  main.cpp  math.cpp  math.hpp  memory.cpp  memory.hpp
imgui/: CMakeLists.txt
